--- a/api/package.json
+++ b/api/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "cors": "^2.7.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "method-override": "^2.3.5",
+    "mongodb": "^2.0.46",
     "mongoose": "^4.1.11",
     "morgan": "^1.6.1"
   }
